Complete recoding